		to manage
		- Get* methods renamed to Create*, that is more logical
		- ToBoolean(out bool) method replaced by method
		bool? ToNullableBoolean()
		- Null property removed (redundant use of NullObject field)
		- NullObject field renamed to Null
		- explicit conversion operators made implicit
	* Operator.cs: added overload of the method Evaluate to
	support evaluation outside a context

2010-05-01  Antonello Provenzano  <antonello@deveel.com>
	* TableName.cs: added an overload of the method ToString
	that accepts a boolean to include the 'UnknownSchema'.
	
2010-02-05  Antonello Provenzano  <antonello@deveel.com>
	* InternalDbHelper.cs: InternalConnection constructor
	reflects the new internal constructor of DeveelDbConnection
	
2010-01-24  Antonello Provenzano  <antonello@deveel.com>
	* DatabaseSystem.cs: 
	
2009-12-21  Antonello Provenzano  <antonello@deveel.com>	
	* RowData.cs:
		- renamed to 'DataRow'
		- methods SetColumnData, SetColumnDataFromObject
		and SetColumnDataFromTObject joined into a single
		method 'SetValue'
		- constructors made 'internal'
		- method GetCellData renamed to 'GetValue'
	* DataTable.cs: method 'CreateRowDataObject' renamed
	to 'NewDataRow' (also parameter IQueryContext removed).
	* TType.cs: Encode/Decode support for INTERVAL
	
2009-12-15  Antonello Provenzano  <antonello@deveel.com>
	* TIntervalType.cs: 
		- definition of the type doesn't require the length 
		anymore and accept an SqlType specification
		- CompareTo type refactored to accept comparisons
		only with Interval and for the type given
	* TType.cs: the 'IntervalType' field now is built upon
	a FULL INTERVAL type.
	* SqlType.cs: 
		- removed fields Year, Month, Day, Hour, Minute 
		and Second
		- added fields YearToMonth and DayToSecond
	* TObject.cs: 
		- replaced support for INTERVAL types
		from TimeStamp to Interval
		- 'implicit' operators replaced with 'explicit's
	* ObjectTransfer.cs: 
		- INTERVAL types are now handled by	Interval type